--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,29 +34,28 @@
                 </h4>
 
                 <!-- Button trigger modal -->
-                <button type="button" id="comment" class="btn btn-secondary btn-sm float-right" data-toggle="modal" data-target="#exampleModal">
+                <button type="button" class="btn btn-secondary btn-sm float-right" data-toggle="modal" data-target="#exampleModalCenter">
                     Add a Comment
                 </button>
 
                 <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
+                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Leave a Comment</h5>
+                                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control article-comment-input" id="{{this._id}}" placeholder="Comment" aria-label="Recipient's username"
-                                        aria-describedby="basic-addon2">
+                                    <input type="text" class="form-control" placeholder="Comment" aria-label="Username" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" action="/submit" method="post" data-id="{{this._id}}" class="btn btn-primary comment-save">Save changes</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
                             </div>
                         </div>
                     </div>
